sandc/test/fixtures/astRegression/shouldSucceed/productions/strPseudex/TryOrThrowPseudex.sand
pub class TryOrThrowPseudex {
    foo() {
        return tryorthrow b;
    }
}