sandc/test/fixtures/astRegression/shouldFail/return/MissingSemicolon.sand
pub class MissingSemicolon {
    missingSemi() {
        return 8
    }
}